cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA.cmake"
  DESTINATION "${Torch_INSTALL_CMAKE_SUBDIR}")
INSTALL(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/make2cmake.cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/parse_cubin.cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/run_nvcc.cmake"
  DESTINATION "${Torch_INSTALL_CMAKE_SUBDIR}/FindCUDA")

