cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  "${CMAKE_MODULE_PATH}")

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA.cmake"
              "${CMAKE_CURRENT_SOURCE_DIR}/FindCudaArch.cmake"
  DESTINATION "${CMAKE_INSTALL_SUBDIR}")

INSTALL(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/make2cmake.cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/parse_cubin.cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/run_nvcc.cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/FindCUDA/select_compute_arch.cmake"
  DESTINATION "${CMAKE_INSTALL_SUBDIR}/FindCUDA")
