cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 5.5 REQUIRED)
FIND_PACKAGE(CudaArch REQUIRED)

#INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/FindCudaArch.cmake)
SELECT_NVCC_ARCH_FLAGS(NVCC_FLAGS_EXTRA)
message("nvcc flags extra ${NVCC_FLAGS_EXTRA}")
# LIST(APPEND CUDA_NVCC_FLAGS ${NVCC_FLAGS_EXTRA})

